--- a/P1/Makefile
+++ b/P1/Makefile
@@ -1,22 +1,16 @@
-# Compiler settings
 CC = gcc
-CFLAGS = -Wall -Wextra -g
+CFLAGS = -std=c99 -g -Wall -fsanitize=address,undefined
 
-# Executable and source files
-EXEC = memgrind
 SRC = memgrind.c mymalloc.c
 OBJ = $(SRC:.c=.o)
 
-# Default rule: Build the executable
-all: $(EXEC)
+all: memgrind
 
-$(EXEC): $(OBJ)
+memgrind: $(OBJ)
 	$(CC) $(CFLAGS) -o $@ $^
 
-# Compile C files into object files
 %.o: %.c mymalloc.h
 	$(CC) $(CFLAGS) -c $< -o $@
 
-# Clean up object files and executables
 clean:
 	rm -f $(OBJ) $(EXEC)
